Added: NuGet package creation

--- a/jcDB.lib/jcDB.lib.csproj
+++ b/jcDB.lib/jcDB.lib.csproj
@@ -1,9 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>jcDB</PackageId>
+    <Version>0.0.1</Version>
+    <Authors>Jarred Capellman</Authors>
+    <Product>jcDB</Product>
+    <Description>Lightweight .NET Standard KV DB</Description>
+    <Copyright>MIT</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>http://jcapellman.github.io/jcDB/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/jcapellman/jcDB</RepositoryUrl>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 </Project>
