--- a/jcDB.lib/jcDB.lib.csproj
+++ b/jcDB.lib/jcDB.lib.csproj
@@ -11,7 +11,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>http://jcapellman.github.io/jcDB/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/jcapellman/jcDB</RepositoryUrl>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
