Change: Migrated from .NET Standard to .NET Core 3.0

--- a/jcDB.lib/jcDB.lib.csproj
+++ b/jcDB.lib/jcDB.lib.csproj
@@ -1,12 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>jcDB</PackageId>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <Authors>Jarred Capellman</Authors>
     <Product>jcDB</Product>
-    <Description>Lightweight .NET Standard KV DB</Description>
+    <Description>Lightweight .NET Core KV DB</Description>
     <Copyright>MIT</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>http://jcapellman.github.io/jcDB/</PackageProjectUrl>
